[tool.poetry]
name = "audio-to-text"
version = "0.1.0"
description = ""
authors = ["Kazuki Hanai <hnkz.64@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.37.0"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "/Users/hnkz/Library/Caches/pypoetry/virtualenvs/audio-to-text-S5j1zCJy-py3.12"
venv = "."
